--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,7 +1,13 @@
 
-FROM node:18-alpine
+FROM node:18-alpine AS development  # Optimized base image
+
+# Install dependencies 
 WORKDIR /app
+COPY package*.json ./ 
+RUN npm install --silent 
+
+# Copy project files
 COPY . .
-RUN yarn install --production
-CMD ["node", "src/index.js"]
-EXPOSE 3000
+
+# Start the development server
+CMD ["npm", "run", "start"]
