--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   portfolio:  
     container_name: portfolio  
     build:
-      context: .  # Assuming Dockerfile is in the same directory
+      context: . 
       dockerfile: DOCKERFILE
     volumes:
       - .:/app  # Mount project code for development
