--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,10 +1,11 @@
-
-FROM node:18-alpine3.14
+FROM node:18-alpine
 
 WORKDIR /app
-COPY package*.json ./ 
-RUN npm install --silent 
+
+COPY package.json ./
+
+RUN npm install
 
 COPY . .
 
-CMD ["npm install -g npm@10.7.0","npm", "run", "start"]
+CMD ["npm", "run", "start"]
