--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "p-queue": "^8.0.1",
     "postcss": "^8.4.32",
     "puppeteer": "^21.6.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.2",
     "react-router-dom": "^6.23.0",
     "store": "^2.0.12",
