--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,11 @@ version: '3.8'
 services:
   portfolio:  
     container_name: portfolio  # This is optional, but helps you identify the container easily.
-    image: portfolio:latest  # Specify the image name and tag (latest is default if not specified).
+    image: portfolio:latest 
+    environment:
+      - GITHUB_PAT=""
+      - OWNER=""
+      - REPO=""
     volumes:
       - .:/app  
       - /app/node_modules  
