--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,9 @@ services:
   portfolio:  
     container_name: portfolio  # This is optional, but helps you identify the container easily.
     image: portfolio:latest 
-    environment:
-      - GITHUB_PAT=""
-      - OWNER=""
-      - REPO=""
+    env_file:
+      - env.local
+      
     volumes:
       - .:/app  
       - /app/node_modules  
