--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "fs.promises": "^0.1.2",
     "ink": "^4.4.1",
     "isomorphic-git": "^1.25.2",
+    "latest": "^0.2.0",
     "markdown-it": "^13.0.1",
     "mongoose": "^8.0.3",
-    "next": "^14.2.3",
+    "next": "^15.4.0-canary.38",
     "p-queue": "^8.0.1",
     "postcss": "^8.4.32",
     "puppeteer": "^24.8.2",
